<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.VoiceInputFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_button_background_off"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/text"
            app:layout_constraintEnd_toStartOf="@+id/voiceButton"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/voiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/toggle_button_background_on"
            android:text="@string/voice"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/promptLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here_to_start_recording"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/clearButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clearButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:drawableTop="@drawable/mic"
            android:elevation="12dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/promptLabel"
            app:layout_constraintTop_toBottomOf="@+id/textButton" />

        <EditText
            android:id="@+id/promptEditText_advance2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:autofillHints="prompt"
            android:background="@drawable/rounded_edittext"
            android:gravity="top|start"
            android:hint="@string/what_you_say_will_be_displayed_here"
            android:inputType="textMultiLine"
            android:maxLines="1000"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="#595959"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clearButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptEditText_advance2" />


        <TextView
            android:id="@+id/responseLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/response"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitButton2" />

        <EditText
            android:id="@+id/responseEditText_advance2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:autofillHints="none"
            android:background="@drawable/rounded_edittext"
            android:editable="false"
            android:gravity="top|start"
            android:hint="@string/the_system_response_will_appear_here"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textColorHint="#595959"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/responseLabel2"
            tools:ignore="Deprecated" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearButton2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:elevation="12dp"
            android:focusable="true"
            android:text="@string/clear"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/responseEditText_advance2"
            app:layout_constraintWidth_percent="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>